# Talk-to-your-video

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
agent/: graph.py  state.py  tools.py
agent/nodes/: cypher_tool.py  router.py  synthesize.py  vector_search_tool.py
app/: Dockerfile  main.py
app/api/routes/: events.py  graph.py  health.py  ingest.py  query.py  segments.py
common/: config.py  models.py
docs/: PLAN.md  PROGRESS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: AppShell.tsx  ChatPanel.test.tsx  ChatPanel.tsx  CitationChip.tsx  FloatingOrbs.tsx  FloatingShapes.tsx  KnowledgeGraph.tsx  ProgressStages.test.tsx  ProgressStages.tsx  SegmentTimeline.test.tsx  SegmentTimeline.tsx  UploadDropzone.test.tsx  UploadDropzone.tsx  VideoLibrary.test.tsx  VideoLibrary.tsx
frontend/src/hooks/: useVideoEvents.ts
graph/: client.py
promo/: README.md  package-lock.json  package.json
promo/src/: Composition.tsx  Root.tsx  theme.ts
promo/src/components/: Background.tsx
promo/src/scenes/: ChatDemoScene.tsx  OutroScene.tsx  PipelineScene.tsx  ProblemScene.tsx  TechStackScene.tsx  TitleScene.tsx
talk_to_your_video/: __init__.py  config.py  logging.py  models.py
talk_to_your_video/agent/: graph.py  llm.py  prompts.py  state.py  tools.py
talk_to_your_video/agent/nodes/: cypher_tool.py  router.py  synthesize.py  vector_search_tool.py  visual_inspect_tool.py
talk_to_your_video/graph/: client.py  graph_view.py  segments.py  video_status.py
talk_to_your_video/graph/migrations/: 002_vector_index.cypher  (+1 more)
talk_to_your_video/ingestion/: analyze_frame.py  embed.py  extract_audio.py  extract_entities.py  extract_frame.py  graph_write.py  pipeline.py  segment.py  transcribe.py
tests/unit/: test_health.py
worker/: Dockerfile  celery_app.py  pipeline.py
worker/tasks/: extract_audio.py  extract_entities.py  graph_write.py  segment.py  transcribe.py
(+24 files in other folders)
